log
Wed 20 Mar 2024 09:46:08 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c36c39a
Wed 20 Mar 2024 09:48:52 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:28: error: expected ‘;’ before ‘}’ token
   50 |        pushFront(L,numeros)
      |                            ^
      |                            ;
......
   53 |      }
      |      ~                      
Compilation failed
c860e82
Wed 20 Mar 2024 09:49:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4e95a13
Wed 20 Mar 2024 09:53:45 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7cb9574
Wed 20 Mar 2024 09:56:38 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|4
total_score: 10/70
3f5e856
Wed 20 Mar 2024 09:58:50 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
be4e261
Wed 20 Mar 2024 09:59:29 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
b906ccc
Wed 20 Mar 2024 09:59:47 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
33b75a5
Wed 20 Mar 2024 10:00:15 PM UTC: 
 exercises.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|4
total_score: 10/70
cf924c7
Wed 20 Mar 2024 10:13:23 PM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:7: error: unused variable ‘suma’ [-Werror=unused-variable]
   64 |   int suma = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
4c9a68b
Wed 20 Mar 2024 10:13:50 PM UTC: 
 exercises.c | 14 --------------
 1 file changed, 14 deletions(-)
 tests:  0|5
total_score: 0/70
810a438
Wed 20 Mar 2024 10:14:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d501b43
Wed 20 Mar 2024 10:16:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8064d95
Wed 20 Mar 2024 10:16:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
938181f
Wed 20 Mar 2024 10:18:54 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
8a42dd7
Wed 20 Mar 2024 10:19:19 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
a39d785
Wed 20 Mar 2024 10:19:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:58:3: error: ‘free’ called on unallocated object ‘numero’ [-Werror=free-nonheap-object]
   58 |   free(numero);
      |   ^~~~~~~~~~~~
exercises.c:53:8: note: declared here
   53 |    int numero[10] = {1,2,3,4,5,6,7,8,9,10};
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2c31dc2
Wed 20 Mar 2024 10:24:08 PM UTC: 
 exercises.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  1|4
total_score: 10/70
0f10bd1
Wed 20 Mar 2024 10:29:09 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:15: error: array subscript [1, 10] is outside array bounds of ‘int[1]’ [-Werror=array-bounds]
   52 |        numeros[i] = i;
      |        ~~~~~~~^~~
exercises.c:48:15: note: referencing an object of size 4 allocated by ‘malloc’
   48 |     numeros = malloc(sizeof(int));
      |               ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f3e2735
Wed 20 Mar 2024 10:29:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:16: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   52 |        numeros = i;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
c8628ff
Wed 20 Mar 2024 10:29:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c15b423
Wed 20 Mar 2024 10:39:13 PM UTC: 
 exercises.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  1|4
total_score: 10/70
fb70dff
Wed 20 Mar 2024 10:43:08 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  1|4
total_score: 10/70
3d320d1
Wed 20 Mar 2024 10:44:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1df35e3
Wed 20 Mar 2024 10:44:45 PM UTC: 
 exercises.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  1|4
total_score: 10/70
9259752
